service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  ports:
  - port: 50051
    targetPort: 50051
  selector:
    app: grpc-service
